--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +7,85 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
+body {
+  background-color: #f5f7fa;
+  font-family: "Inter";
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .body-width-xl {
+    width: calc(100% - 240px);
+  }
+  .body-width-lg {
+    width: calc(100% - 230px);
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    height: 1px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: transparent;
+    width: 1px !important;
+    height: 1px !important;
+  }
+
+  .slice-container {
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: black; */
+  }
+
+  .slice {
+    /* width: 144px;
+    height: 144px; */
+    border-radius: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    position: relative;
+    /* transform: translate(1.3395px, -5px); */
+  }
+
+  .slice-inner-div {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    color: white;
+    position: absolute;
+  }
+
+  /* .slice-inner-div p {
+    display: none;
+    cursor: default;
+  }
+
+  .slice:hover p {
+    display: block;
+  } */
 }
