--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,20 @@ body {
     position: absolute;
   }
 
+  .hole {
+    width: 49px;
+    height: 49px;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    z-index: 30;
+  }
+
   @media screen and (min-width: 640px) {
     .slice-inner-div {
       font-size: 12px;
@@ -107,6 +121,16 @@ body {
   .clamp2 {
     width: clamp(12px, 1vw, 15px);
     height: clamp(12px, 1vw, 15px);
+  }
+
+  .classic {
+    background-image: linear-gradient(45deg, transparent 50%, blue 50%),
+      linear-gradient(135deg, blue 50%, transparent 50%),
+      linear-gradient(to right, skyblue, skyblue);
+    background-position: calc(100% - 20px) calc(1em + 2px),
+      calc(100% - 15px) calc(1em + 2px), 100% 0;
+    background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
+    background-repeat: no-repeat;
   }
   /* 
   .apexcharts-xaxis {
